Refactor 'part2'; Now using Set to distinct.